    - 20 Armour Settings.
    - 20 Batteries Settings.
    - 15 Exoskeleton Settings
    - 20 Fission Settings.
    - 70 Laser Settings.
    - 8 Belt immunity Settings.
    - 8 NVGs Settings.
    - 70 Roboport Settings.
    - 50 Shield Settings.
    - 20 Solar Settings.
    - Total of 285 New settings for you to have fun with. Hope this mod became more fun than ever before?
  Features:
    - [space-age] Made it possible to craft all items in Electromagnetic Plant.
    - ACU recipe [space-age] Edition.
    - Added crafting category = "electronics-or-handcrafting" using hands all assemblers, electromagnetic-plant.
    - Added options play with the old pre 0.17 durability system.
    - Setting to Show all items in Players crafting UI.
    - Better subgroup system.
    - Newer updated https://mods.factorio.com/mod/RampantArsenalFork
    - Better Fixed https://mods.factorio.com/mod/nanobots-refined
    - Added new Armour, Tech & Recipe Icons Textures for Mk6-7. More is coming.
    - RampantArsenalFixed & mech-armour Recipe.
    - Made progression changes to Metal & Stars to go along with this mod. 
  Changes:
    - Requires CAS Version 1.5.12. Due to texture file name changes.
    - [space-age] Electromagnetic Mech crafting. Can use Electromagnetic Plant to craft sarcophagus.
    - [space-age] Recipes have been tweaked for: Armour, Battery, Exoskeleton, Fission, Immunity, Laser, NVGs, Roboport, Shield & SolarPanels. 
    - [space-age] Recipes are now using new crafting category from MK1-5 and 6-10 requires assembly 2 or electromagnetic-plant.
    - Achievement text make more sense.
    - Start of base game towards PAR will now have crafting triggers over science research.
    - PA&R's Tips Info changed please read again for the new message.
    - Rampant's Mech Suit resistances changed, Made combat Mech Suit craft able with PAR.
    - Nanobots refined: 5 at Night Immunity 1. 