@@ -2,7 +2,7 @@
 	"name": "Power-Armour-Replacer",
 	"title": "Power Armour & Replacer",
 	"factorio_version": "2.0",
-	"version": "0.3.25",
+	"version": "0.4.0",
 	"author": "SGZ_Creations",
 	"homepage": "https://github.com/SGZ-Creations/MK10-Armours", 
 	"dependencies":
@@ -18,6 +18,8 @@
 		"? bobwarfare >= 2.0",
 		"? bobenemies >= 2.0",
 		"? bobrevamp >= 2.0",
+		"? bobequipment >= 1.3.0",
+		"? bobtech >= 1.3.0",
 		"(?) exotic-industries >= 0.4.2",
 		"(?) Krastorio2 >= 1.3.19",
 		"? Milestones >= 1.4.4",
@@ -30,17 +32,15 @@
 		"? pypetroleumhandling >= 2.1.16",
 		"? pyrawores >= 2.4.16",
 		"(?) space-exploration >= 0.6.101",
-		"(?) RampantFixed >= 1.9.7",
+		"? RampantFixed >= 1.9.7",
 		"(?) 248k",
 		"(?) grand-unified-factorio-theory >= 1.0.16",
 		"(?) artillery-spidertron",
 		"(?) angelsrefining >= 0.12.4",
 		"(?) angelsbioprocessing >= 0.7.24",
 		"(?) angelspetrochem >= 0.9.24",
-		"(?) bobequipment >= 1.3.0",
-		"(?) bobtech >= 1.3.0",
 		"(?) custom_power_armor_fix >= 5.1.1",
-		"(?) mech-armor >= 1.0.0",
+		"? mech-armor >= 1.0.0",
 		"(?) PowerAndArmor >= 1.19",
 		"? Power Armor MK3 >= 2.1.03",
 		"(?) pypostprocessing >= 0.2.23",
@@ -48,12 +48,12 @@
 		"? RampantArsenalFork >= 1.0.3",
 		"(?) space-spidertron",
 		"(?) SpaceModFeorasFork >= 1.3.0",
-		"(?) spidertron-extended >= 0.3.15",
+		"? spidertron-extended >= 0.3.15",
 		"(?) SpidertronPatrols >= 2.5.3",
 		"(?) spidertrontiers-community-updates >= 0.2.27",
 		"(?) spidertrontiers >= 0.2.18",
 		"(?) SeaBlockMetaPack",
-		"(?) TeleportationEquipment >= 1.0.11",
+		"? TeleportationEquipment >= 1.0.11",
 		"! Early-Armor-Grid",
 		"! Nanobots",
 		"! Nanobots2",
